--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -1,6 +1,6 @@
 $color_gray_primary:       #d5d9dc;
 $color_blue_primary:       #4a90e2;
-@mixin hover-only-transition($properties...){
+@mixin hover-only-transition($properties...) {
     transition-property: $properties;
     transition-duration: .3s;
 }
@@ -8,26 +8,34 @@ $color_blue_primary:       #4a90e2;
 .carousel {
   margin-left: 40px;
   margin-right: 40px;
-  position: relative; }
+  position: relative;
+}
 
 /* directions */
 .carousel_direction_horizontal .carousel__container {
-  overflow-x: scroll; }
+  overflow-x: scroll;
+}
 
 .carousel_direction_horizontal .carousel__ribbon {
   display: -webkit-inline-flex;
   display: -moz-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 .carousel_direction_vertical {
-  height: 100%; }
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
   .carousel_direction_vertical .carousel__stage {
-    height: 100%; }
+    height: 100%;
+  }
   .carousel_direction_vertical .carousel__container {
     height: 100%;
-    overflow-y: scroll; }
+    overflow-y: scroll;
+  }
 
 /* arrows */
 .carousel__arrow {
@@ -42,7 +50,7 @@ $color_blue_primary:       #4a90e2;
   position: absolute;
   top: 0;
   height: 100%;
-  width: 40px; 
+  width: 40px;
 
   &:focus {
     outline: none;
@@ -50,10 +58,12 @@ $color_blue_primary:       #4a90e2;
 }
 
 .carousel_arrows_angles .carousel__arrow_direction_prev {
-  right: 100%; }
+  right: 100%;
+}
 
 .carousel_arrows_angles .carousel__arrow_direction_next {
-  left: 100%; }
+  left: 100%;
+}
 
 .carousel_arrows_angles .carousel__arrow:after {
   content: '';
@@ -64,7 +74,8 @@ $color_blue_primary:       #4a90e2;
   height: 5px;
   border: 0 solid #d5d9dc;
   transition-property: border-color;
-  transition-duration: .3s; }
+  transition-duration: .3s;
+}
 
 .carousel_arrows_angles .carousel__arrow_direction_prev:after {
   border-top-width: 1px;
@@ -72,7 +83,8 @@ $color_blue_primary:       #4a90e2;
   -webkit-transform: rotate(-45deg);
       -ms-transform: rotate(-45deg);
           transform: rotate(-45deg);
-  left: 21px; }
+  left: 21px;
+}
 
 .carousel_arrows_angles .carousel__arrow_direction_next:after {
   border-top-width: 1px;
@@ -83,36 +95,45 @@ $color_blue_primary:       #4a90e2;
   right: 21px; }
 
 .carousel_arrows_angles .carousel__arrow:hover:after {
-  border-color: #4a90e2; }
+  border-color: #4a90e2;
+}
 
 /* unique carousels */
 .carousel_id_tags .carousel__stage {
   height: 30px;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .carousel_id_tags .carousel__item {
-  margin-left: 8px; }
+  margin-left: 8px;
+}
 
 .carousel_id_tags .carousel__item:first-child {
-  margin-left: 0; }
+  margin-left: 0;
+}
 
 .carousel_id_gallery-navigation .carousel__stage {
   width: 40px;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .carousel_id_gallery-navigation .carousel__container {
-  width: 80px; }
+  width: 80px;
+}
 
 .carousel_id_gallery-navigation .carousel__ribbon {
-  width: 40px; }
+  width: 40px;
+}
 
 .carousel_id_gallery-navigation .carousel__item {
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
 .carousel_id_gallery-navigation .carousel__item:first-child {
-  margin-top: 0; }
+  margin-top: 0;
+}
 
-.alias {
+.carousel__item {
   border: none;
   display: inline-block;
   vertical-align: top;
@@ -129,7 +150,29 @@ $color_blue_primary:       #4a90e2;
   overflow: hidden;
 }
 
-.alias:hover {
+.carousel__item:hover {
   background-color: #4a90e2;
-  color: #fff; 
+  color: #fff;
+}
+
+.carousel__arrows-container-vertical {
+  .carousel__arrow_direction_prev-vertical {
+    top: 0px;
+    height: 30px;
+    right: auto;
+    transform: rotateZ(90deg);
+  }
+
+  .carousel__arrow_direction_next-vertical {
+    top: auto;
+    transform: rotateZ(90deg);
+    left: auto;
+    height: 30px;
+  }
+}
+
+.carousel_direction_vertical {
+  .carousel__container {
+    margin-top: 30px;
+  }
 }
