--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -57,15 +57,15 @@ $color_blue_primary:       #4a90e2;
   }
 }
 
-.carousel_arrows_angles .carousel__arrow_direction_prev {
+.carousel__arrow_direction_prev {
   right: 100%;
 }
 
-.carousel_arrows_angles .carousel__arrow_direction_next {
+.carousel__arrow_direction_next {
   left: 100%;
 }
 
-.carousel_arrows_angles .carousel__arrow:after {
+.carousel__arrow:after {
   content: '';
   display: block;
   position: absolute;
@@ -77,7 +77,7 @@ $color_blue_primary:       #4a90e2;
   transition-duration: .3s;
 }
 
-.carousel_arrows_angles .carousel__arrow_direction_prev:after {
+.carousel__arrow_direction_prev:after {
   border-top-width: 1px;
   border-left-width: 1px;
   -webkit-transform: rotate(-45deg);
@@ -86,15 +86,16 @@ $color_blue_primary:       #4a90e2;
   left: 21px;
 }
 
-.carousel_arrows_angles .carousel__arrow_direction_next:after {
+.carousel__arrow_direction_next:after {
   border-top-width: 1px;
   border-right-width: 1px;
   -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
           transform: rotate(45deg);
-  right: 21px; }
+  right: 21px;
+}
 
-.carousel_arrows_angles .carousel__arrow:hover:after {
+.carousel__arrow:hover:after {
   border-color: #4a90e2;
 }
 
